--- a/main.css
+++ b/main.css
@@ -54,9 +54,9 @@ h2, .watch{
 /*footer content formatted*/
 
 /*applying flex centering to content of contact section*/
-/*.contact-area{
+.contact-area{
   display: flex;
   flex-direction: row;
   justify-content: center;
-}*/
+}
 /*end contact content styling*/
