--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@ body {
 
 .formatvideo {
 	margin: 0 auto;
-	border: 10px outset #ddd;
+	border: 4px solid gray;
 }
 /*end formatting video*/
 
@@ -58,5 +58,6 @@ h2, .watch{
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width
 }
 /*end contact content styling*/
